# goosefoot

./: CMakeLists.txt  LICENSE  README.md  index.html
components/lesion/: index.html
docs/: index.md  xml.md
docs/components/: elmergrid.md
gssf/: setup.py.in  setup2.py.in
gssf/scripts/: go-smart-launcher
gssf/src/gssf/: config.py  elmer.py  errors.py  gssf.py  lesion.py  logger.py  mesher_3d_cgal.py  needlelibrary_interface.py  validation.py
gssf/src/gssf2/needlelibrary/: config.py  cuboidbuilder.py  extentbuilder.py  manipulator.py  needlelibrary.py  spherebuilder.py
lesion/: CMakeLists.txt  go-smart-lesion.cpp
mkdocs/: search_index.json
tools/numa-elmer/: index.html
